syntax = "proto3";
package proto;
import "core.proto";

option go_package = "github.com/anyuan-chen/record/proto/pkg/session_manager_pb";


message SessionID {
    string code = 1;
}
service SessionManager {
    rpc CreateSession(Token) returns (SessionID);
    rpc GetSession(SessionID) returns (Token);
}

// protoc -I=./proto --go_out=./pkg/session_manager_pb --go_opt=paths=source_relative \
// --go-grpc_out=./pkg/session_manager_pb --go-grpc_opt=paths=source_relative \
// session_manager.proto 